Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29402

QFileInfo::canonicalFilePath () generate error if Qt is built for 32 bit on non existing file.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.0 Alpha
    • 4.8.4
    • Core: I/O
    • None
    • OSX 10.6.8 cocoa

    Description

      If QFileInfo::canonicalFilePath() is called on a path that does not exists then it flags an error

      malloc: *** error for object 0xbfffcea0: pointer being freed was not allocated
      set a breakpoint in malloc_error_break to debug

      This happens if Qt is built with -arch x86

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Eddy Edward Welbourne
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes